# lerobot_openarm

./: LICENSE  README.md  calibration.example.json  calibration.json  change_task_name.py  deploy_ACT.py  deploy_gr00t.py  deploy_gr00t_stanley.py  deploy_smolvla.py  deploy_smolvla_pickup.py  deploy_smolvla_stanley.py  emergency_disable.py  ik_bridge.py  mirror_bridge.py  pyproject.toml  raw_can_read.py  read.py  record.py  replay.py  replay_hf_sim_episode.py  replay_sim_dataset.py  reset_to_rest_pose.py  safe_probe.py  sim_bridge_common.py  teleop.py  test.py  test_left_joints.py  upload_my_data.py
log/: tracking_ep0.csv  tracking_ep0_v2.csv
robots/umeow_openarm_follower/: config_openarm_follower.py  openarm_follower.py
teleoperators/umeow_openarm_leader/: config_openarm_leader.py  openarm_leader.py
