[project]
name = "lerobot-openarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lerobot[dataset,groot,training,viz]",
    "matplotlib>=3.10.8",
    "openarm-can>=1.2.3",
    "pin",
    "python-dotenv>=1.2.1",
    "deepdiff>=8.0.0",
    "num2words>=0.5.14",
]

[dependency-groups]
dev = [
    "pybind11-stubgen>=2.5.5",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot.git", branch = "main" }
